Move api logic to FE from localstorage to Spring Security Session. For Login, ProfilePage, addressPage, serviceOrder,...